[package]
name = "lsif"
version = "0.0.1"
authors = ["Igor Matuszewski <Xanewok@gmail.com>"]
edition = "2018"
description = "Types for Language Server Index Format (LSIF)"
repository = "https://github.com/Xanewok/lsif"
license = "Apache-2.0/MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "Xanewok/lsif" }

[dependencies]
languageserver-types = "0.51"
serde = "1"
serde_derive = "1"
serde_json = "1"
url_serde = "0.2.0"